# deklare

./: pyproject.toml
src/deklare/: __init__.py  core.py  dataset.py  deskribe.py  graph.py  persist.py  utils.py
