[project]
name = "deklare"
version = "0.1.3"
description = "A data processing framework for data exploration"
authors = [
    { name = "Matthias Meyer", email = "contact@niowniow.net" },
    { name = "Jan Hochstrasser", email = "jhochstrasse@ethz.ch" }
]
dependencies = [
    "dask>=2024.5.1",
    "pandas>=2.2.3",
    "zarr>=2.18.2",
    "compress-pickle>=2.1.0",
    "cachetools>=5.3.3",
    "numpy>=2",
    "pystac>=1.11.0",
    "shapely>=2.0.6",
]
readme = "README.md"
requires-python = ">= 3.12"

[project.optional-dependencies]
examples = [
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
